--- a/AcrlSync/AcrlSync.csproj
+++ b/AcrlSync/AcrlSync.csproj
@@ -105,8 +105,12 @@
     <Compile Include="Model\IFtpService.cs" />
     <Compile Include="Model\Tree.cs" />
     <Compile Include="ProgressReporter.cs" />
+    <Compile Include="UploadView.xaml.cs">
+      <DependentUpon>UploadView.xaml</DependentUpon>
+    </Compile>
     <Compile Include="ViewModel\jobVM.cs" />
     <Compile Include="ViewModel\MainViewModel.cs" />
+    <Compile Include="ViewModel\uploadSkinVM.cs" />
     <Compile Include="ViewModel\ViewModelLocator.cs" />
     <Page Include="jobView.xaml">
       <SubType>Form</SubType>
@@ -124,6 +128,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="UploadView.xaml">
+      <SubType>Form</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs">
