--- a/AcrlSync/packages.config
+++ b/AcrlSync/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="ByteSize" version="1.2.2" targetFramework="net451" />
   <package id="CommonServiceLocator" version="1.3" targetFramework="net451" />
+  <package id="Microsoft.CodeAnalysis.NetAnalyzers" version="5.0.3" targetFramework="net451" developmentDependency="true" />
   <package id="MvvmLightLibs" version="5.2.0.0" targetFramework="net451" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net451" />
   <package id="Ookii.Dialogs" version="1.0" targetFramework="net451" />
